--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </nav>
   </header>
   <main>
-    <h2>Website de Currículo</h2>
+    <h2>Banco de Currículos time Cloud Girls</h2>
     <p class="firstP">
       Este site apresenta o Curriculum vitae de pessoas corajosas e empenhada
-      em desbravar o mundo da Cloud AWS..
+      em desbravar o mundo da Cloud AWS
     </p>
     <section class="secondSection">
       <div class="photoDiv">
@@ -84,9 +84,23 @@
     </section>
   </main>
 
+
+  <br>
+  <br>
+  <br>
+  <br>
+
+  
   <footer>
-    <h2>Agradecimento final</h2>
-    <img src="./imgs/nuvem-transformacao.jpeg" alt="" />
+    
+    <h2>Apoiadores do nosso desenvolvimento.</h2>
+    <div class="photoDiv">
+      <img src="./imgs/nuvem-transformacao.jpeg" alt="" />
+      <div>
+        <a href="https://www.linkedin.com/company/escola-da-nuvem/"><img src="./imgs/icons8-linkedin-144.png" class="linkedin"  alt=""></a>
+        <a href="https://linktr.ee/transformar.tech"><img src="./imgs/icons8-linkedin-144.png" class="linkedin" alt=""></a>
+      </div>
+    </div>
   </footer>
 </body>
 
